Fix visibility status of flag/book icon on challenge buttons

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -124,3 +124,7 @@
   margin-top: 15px;
   width: fit-content;
 }
+
+[hidden] {
+  display: none !important;
+}
